// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserChat snapshot tests should match snapshot 1`] = `
<styled.div>
  <Styled(styled.button)
    className="image-container"
  >
    <img
      src="http://localhost:8080/images/download/image.png"
    />
  </Styled(styled.button)>
  <styled.div
    isInfoVisible={false}
  >
    <span>
      <b>
        firstname lastName
      </b>
    </span>
    <styled.div
      isInfoVisible={false}
    >
      <span>
        <b>
          firstname lastName
        </b>
      </span>
      <span>
        <b>
          2021-08-22
        </b>
      </span>
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.button
      data-testid="toggleInfo"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              192,
              512,
              Array [],
              "f129",
              "M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z",
            ],
            "iconName": "info",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </styled.button>
    <styled.button
      data-testid="setChat"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f04e",
              "M500.5 231.4l-192-160C287.9 54.3 256 68.6 256 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2zm-256 0l-192-160C31.9 54.3 0 68.6 0 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2z",
            ],
            "iconName": "forward",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </styled.button>
  </styled.div>
</styled.div>
`;

exports[`UserChat snapshot tests should match snapshot with toggled info 1`] = `
<styled.div>
  <Styled(styled.button)
    className="image-container"
  >
    <img
      src="http://localhost:8080/images/download/image.png"
    />
  </Styled(styled.button)>
  <styled.div
    isInfoVisible={true}
  >
    <span>
      <b>
        firstname lastName
      </b>
    </span>
    <styled.div
      isInfoVisible={true}
    >
      <span>
        <b>
          firstname lastName
        </b>
      </span>
      <span>
        <b>
          2021-08-22
        </b>
      </span>
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.button
      data-testid="toggleInfo"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              192,
              512,
              Array [],
              "f129",
              "M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z",
            ],
            "iconName": "info",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </styled.button>
    <styled.button
      data-testid="setChat"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f04e",
              "M500.5 231.4l-192-160C287.9 54.3 256 68.6 256 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2zm-256 0l-192-160C31.9 54.3 0 68.6 0 96v320c0 27.4 31.9 41.8 52.5 24.6l192-160c15.3-12.8 15.3-36.4 0-49.2z",
            ],
            "iconName": "forward",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </styled.button>
  </styled.div>
</styled.div>
`;
